--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -94,7 +94,7 @@ body {
   border-radius: 3px;
 }
 .bg-primary {
-  background-color: #e2db64 !important;
+  background-color: #a79f11 !important;
 }
 .bg-success {
   background-color: #a79f11 !important;
@@ -110,23 +110,23 @@ body {
 }
 .btn-primary,
 .btn-primary:active {
-  background-color: #e2db64 !important;
-  border-color: #e2db64 !important;
-  color: #3c390b !important;
+  background-color: #a79f11 !important;
+  border-color: #a79f11 !important;
+  color: #ffffff !important;
 }
 .btn-primary:hover,
 .btn-primary:focus,
 .btn-primary.focus,
 .btn-primary.active {
-  color: #3c390b !important;
-  background-color: #d2c927 !important;
-  border-color: #d2c927 !important;
+  color: #ffffff !important;
+  background-color: #625d0a !important;
+  border-color: #625d0a !important;
 }
 .btn-primary.disabled,
 .btn-primary:disabled {
-  color: #3c390b !important;
-  background-color: #d2c927 !important;
-  border-color: #d2c927 !important;
+  color: #ffffff !important;
+  background-color: #625d0a !important;
+  border-color: #625d0a !important;
 }
 .btn-secondary,
 .btn-secondary:active {
@@ -274,22 +274,22 @@ body {
 .btn-primary-outline,
 .btn-primary-outline:active {
   background: none;
-  border-color: #bdb423;
-  color: #bdb423;
+  border-color: #4a4708;
+  color: #4a4708;
 }
 .btn-primary-outline:hover,
 .btn-primary-outline:focus,
 .btn-primary-outline.focus,
 .btn-primary-outline.active {
-  color: #3c390b;
-  background-color: #e2db64;
-  border-color: #e2db64;
+  color: #ffffff;
+  background-color: #a79f11;
+  border-color: #a79f11;
 }
 .btn-primary-outline.disabled,
 .btn-primary-outline:disabled {
-  color: #3c390b !important;
-  background-color: #e2db64 !important;
-  border-color: #e2db64 !important;
+  color: #ffffff !important;
+  background-color: #a79f11 !important;
+  border-color: #a79f11 !important;
 }
 .btn-secondary-outline,
 .btn-secondary-outline:active {
@@ -426,7 +426,7 @@ body {
   border-color: #ffffff;
 }
 .text-primary {
-  color: #e2db64 !important;
+  color: #a79f11 !important;
 }
 .text-secondary {
   color: #ff3366 !important;
@@ -451,7 +451,7 @@ body {
 }
 a.text-primary:hover,
 a.text-primary:focus {
-  color: #bdb423 !important;
+  color: #4a4708 !important;
 }
 a.text-secondary:hover,
 a.text-secondary:focus {
@@ -509,9 +509,9 @@ a.text-black:focus {
   border-radius: 100px !important;
 }
 .mbr-gallery-filter li.active .btn {
-  background-color: #e2db64;
-  border-color: #e2db64;
-  color: #514e0f;
+  background-color: #a79f11;
+  border-color: #a79f11;
+  color: #ffffff;
 }
 .mbr-gallery-filter li.active .btn:focus {
   box-shadow: none;
@@ -521,11 +521,11 @@ a.text-black:focus {
 }
 a,
 a:hover {
-  color: #e2db64;
+  color: #a79f11;
 }
 .mbr-plan-header.bg-primary .mbr-plan-subtitle,
 .mbr-plan-header.bg-primary .mbr-plan-price-desc {
-  color: #ffffff;
+  color: #ede44b;
 }
 .mbr-plan-header.bg-success .mbr-plan-subtitle,
 .mbr-plan-header.bg-success .mbr-plan-price-desc {
@@ -556,7 +556,7 @@ a:hover {
   font-size: 1.6rem;
 }
 blockquote {
-  border-color: #e2db64;
+  border-color: #a79f11;
 }
 /* Forms */
 .mbr-form .btn {
@@ -612,11 +612,11 @@ blockquote {
 /* Footer */
 .mbr-footer-content li::before,
 .mbr-footer .mbr-contacts li::before {
-  background: #e2db64;
+  background: #a79f11;
 }
 .mbr-footer-content li a:hover,
 .mbr-footer .mbr-contacts li a:hover {
-  color: #e2db64;
+  color: #a79f11;
 }
 .footer3 input[type="email"],
 .footer4 input[type="email"] {
@@ -658,8 +658,8 @@ blockquote {
 }
 .jq-selectbox li:hover,
 .jq-selectbox li.selected {
-  background-color: #e2db64;
-  color: #000000;
+  background-color: #a79f11;
+  color: #ffffff;
 }
 .jq-selectbox .jq-selectbox__trigger-arrow,
 .jq-number__spin.minus:after,
@@ -671,14 +671,14 @@ blockquote {
 .jq-selectbox:hover .jq-selectbox__trigger-arrow,
 .jq-number__spin.minus:hover:after,
 .jq-number__spin.plus:hover:after {
-  border-top-color: #e2db64;
-  border-bottom-color: #e2db64;
+  border-top-color: #a79f11;
+  border-bottom-color: #a79f11;
 }
 .xdsoft_datetimepicker .xdsoft_calendar td.xdsoft_default,
 .xdsoft_datetimepicker .xdsoft_calendar td.xdsoft_current,
 .xdsoft_datetimepicker .xdsoft_timepicker .xdsoft_time_box > div > div.xdsoft_current {
   color: #000000 !important;
-  background-color: #e2db64 !important;
+  background-color: #a79f11 !important;
   box-shadow: none !important;
 }
 .xdsoft_datetimepicker .xdsoft_calendar td:hover,
@@ -707,7 +707,7 @@ iframe.lazy-placeholder,
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
-  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='32' height='32' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg' stroke='%23e2db64' %3e%3cg fill='none' fill-rule='evenodd'%3e%3cg transform='translate(16 16)' stroke-width='2'%3e%3ccircle stroke-opacity='.5' cx='16' cy='16' r='16'/%3e%3cpath d='M32 16c0-9.94-8.06-16-16-16'%3e%3canimateTransform attributeName='transform' type='rotate' from='0 16 16' to='360 16 16' dur='1s' repeatCount='indefinite'/%3e%3c/path%3e%3c/g%3e%3c/g%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='32' height='32' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg' stroke='%23a79f11' %3e%3cg fill='none' fill-rule='evenodd'%3e%3cg transform='translate(16 16)' stroke-width='2'%3e%3ccircle stroke-opacity='.5' cx='16' cy='16' r='16'/%3e%3cpath d='M32 16c0-9.94-8.06-16-16-16'%3e%3canimateTransform attributeName='transform' type='rotate' from='0 16 16' to='360 16 16' dur='1s' repeatCount='indefinite'/%3e%3c/path%3e%3c/g%3e%3c/g%3e%3c/svg%3e");
 }
 section.lazy-placeholder:after {
   opacity: 0.3;
@@ -3147,8 +3147,8 @@ section.lazy-placeholder:after {
   color: #767676 !important;
 }
 .cid-s7wxyfwZsF {
-  padding-top: 90px;
-  padding-bottom: 60px;
+  padding-top: 120px;
+  padding-bottom: 45px;
   background-image: url("../../../assets/images/mbr-4.jpg");
 }
 .cid-s7wxyfwZsF .icons-media-container {
@@ -3178,7 +3178,7 @@ section.lazy-placeholder:after {
   text-align: center;
 }
 .cid-s7wzXRrfg3 {
-  padding-top: 60px;
+  padding-top: 30px;
   padding-bottom: 30px;
   background-color: #000000;
 }
