--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -94,7 +94,7 @@ body {
   border-radius: 3px;
 }
 .bg-primary {
-  background-color: #a79f11 !important;
+  background-color: #9f9818 !important;
 }
 .bg-success {
   background-color: #a79f11 !important;
@@ -110,8 +110,8 @@ body {
 }
 .btn-primary,
 .btn-primary:active {
-  background-color: #a79f11 !important;
-  border-color: #a79f11 !important;
+  background-color: #9f9818 !important;
+  border-color: #9f9818 !important;
   color: #ffffff !important;
 }
 .btn-primary:hover,
@@ -119,14 +119,14 @@ body {
 .btn-primary.focus,
 .btn-primary.active {
   color: #ffffff !important;
-  background-color: #625d0a !important;
-  border-color: #625d0a !important;
+  background-color: #5d580e !important;
+  border-color: #5d580e !important;
 }
 .btn-primary.disabled,
 .btn-primary:disabled {
   color: #ffffff !important;
-  background-color: #625d0a !important;
-  border-color: #625d0a !important;
+  background-color: #5d580e !important;
+  border-color: #5d580e !important;
 }
 .btn-secondary,
 .btn-secondary:active {
@@ -274,22 +274,22 @@ body {
 .btn-primary-outline,
 .btn-primary-outline:active {
   background: none;
-  border-color: #4a4708;
-  color: #4a4708;
+  border-color: #46430b;
+  color: #46430b;
 }
 .btn-primary-outline:hover,
 .btn-primary-outline:focus,
 .btn-primary-outline.focus,
 .btn-primary-outline.active {
   color: #ffffff;
-  background-color: #a79f11;
-  border-color: #a79f11;
+  background-color: #9f9818;
+  border-color: #9f9818;
 }
 .btn-primary-outline.disabled,
 .btn-primary-outline:disabled {
   color: #ffffff !important;
-  background-color: #a79f11 !important;
-  border-color: #a79f11 !important;
+  background-color: #9f9818 !important;
+  border-color: #9f9818 !important;
 }
 .btn-secondary-outline,
 .btn-secondary-outline:active {
@@ -426,7 +426,7 @@ body {
   border-color: #ffffff;
 }
 .text-primary {
-  color: #a79f11 !important;
+  color: #9f9818 !important;
 }
 .text-secondary {
   color: #ff3366 !important;
@@ -451,7 +451,7 @@ body {
 }
 a.text-primary:hover,
 a.text-primary:focus {
-  color: #4a4708 !important;
+  color: #46430b !important;
 }
 a.text-secondary:hover,
 a.text-secondary:focus {
@@ -509,8 +509,8 @@ a.text-black:focus {
   border-radius: 100px !important;
 }
 .mbr-gallery-filter li.active .btn {
-  background-color: #a79f11;
-  border-color: #a79f11;
+  background-color: #9f9818;
+  border-color: #9f9818;
   color: #ffffff;
 }
 .mbr-gallery-filter li.active .btn:focus {
@@ -521,11 +521,11 @@ a.text-black:focus {
 }
 a,
 a:hover {
-  color: #a79f11;
+  color: #9f9818;
 }
 .mbr-plan-header.bg-primary .mbr-plan-subtitle,
 .mbr-plan-header.bg-primary .mbr-plan-price-desc {
-  color: #ede44b;
+  color: #e5dd52;
 }
 .mbr-plan-header.bg-success .mbr-plan-subtitle,
 .mbr-plan-header.bg-success .mbr-plan-price-desc {
@@ -556,7 +556,7 @@ a:hover {
   font-size: 1.6rem;
 }
 blockquote {
-  border-color: #a79f11;
+  border-color: #9f9818;
 }
 /* Forms */
 .mbr-form .btn {
@@ -612,11 +612,11 @@ blockquote {
 /* Footer */
 .mbr-footer-content li::before,
 .mbr-footer .mbr-contacts li::before {
-  background: #a79f11;
+  background: #9f9818;
 }
 .mbr-footer-content li a:hover,
 .mbr-footer .mbr-contacts li a:hover {
-  color: #a79f11;
+  color: #9f9818;
 }
 .footer3 input[type="email"],
 .footer4 input[type="email"] {
@@ -658,7 +658,7 @@ blockquote {
 }
 .jq-selectbox li:hover,
 .jq-selectbox li.selected {
-  background-color: #a79f11;
+  background-color: #9f9818;
   color: #ffffff;
 }
 .jq-selectbox .jq-selectbox__trigger-arrow,
@@ -671,14 +671,14 @@ blockquote {
 .jq-selectbox:hover .jq-selectbox__trigger-arrow,
 .jq-number__spin.minus:hover:after,
 .jq-number__spin.plus:hover:after {
-  border-top-color: #a79f11;
-  border-bottom-color: #a79f11;
+  border-top-color: #9f9818;
+  border-bottom-color: #9f9818;
 }
 .xdsoft_datetimepicker .xdsoft_calendar td.xdsoft_default,
 .xdsoft_datetimepicker .xdsoft_calendar td.xdsoft_current,
 .xdsoft_datetimepicker .xdsoft_timepicker .xdsoft_time_box > div > div.xdsoft_current {
-  color: #000000 !important;
-  background-color: #a79f11 !important;
+  color: #ffffff !important;
+  background-color: #9f9818 !important;
   box-shadow: none !important;
 }
 .xdsoft_datetimepicker .xdsoft_calendar td:hover,
@@ -707,7 +707,7 @@ iframe.lazy-placeholder,
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
-  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='32' height='32' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg' stroke='%23a79f11' %3e%3cg fill='none' fill-rule='evenodd'%3e%3cg transform='translate(16 16)' stroke-width='2'%3e%3ccircle stroke-opacity='.5' cx='16' cy='16' r='16'/%3e%3cpath d='M32 16c0-9.94-8.06-16-16-16'%3e%3canimateTransform attributeName='transform' type='rotate' from='0 16 16' to='360 16 16' dur='1s' repeatCount='indefinite'/%3e%3c/path%3e%3c/g%3e%3c/g%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='32' height='32' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg' stroke='%239f9818' %3e%3cg fill='none' fill-rule='evenodd'%3e%3cg transform='translate(16 16)' stroke-width='2'%3e%3ccircle stroke-opacity='.5' cx='16' cy='16' r='16'/%3e%3cpath d='M32 16c0-9.94-8.06-16-16-16'%3e%3canimateTransform attributeName='transform' type='rotate' from='0 16 16' to='360 16 16' dur='1s' repeatCount='indefinite'/%3e%3c/path%3e%3c/g%3e%3c/g%3e%3c/svg%3e");
 }
 section.lazy-placeholder:after {
   opacity: 0.3;
@@ -958,7 +958,7 @@ section.lazy-placeholder:after {
 }
 @media (min-width: 1024px) {
   .cid-s7uQ0vBSoM .collapsed:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 6rem);
+    max-height: calc(98.5vh - 5rem);
   }
 }
 .cid-s7uQ0vBSoM .collapsed button.navbar-toggler {
@@ -1113,7 +1113,7 @@ section.lazy-placeholder:after {
   color: #767676 !important;
 }
 .cid-s6TP7Ia5zB {
-  padding-top: 60px;
+  padding-top: 75px;
   padding-bottom: 60px;
   background-color: #000000;
 }
@@ -1382,6 +1382,9 @@ section.lazy-placeholder:after {
     justify-content: center;
   }
 }
+.cid-s6TSdHcqXR H5 {
+  color: #f5e917;
+}
 .cid-s7uQ0vBSoM .navbar {
   background: #000000;
   transition: none;
@@ -1628,7 +1631,7 @@ section.lazy-placeholder:after {
 }
 @media (min-width: 1024px) {
   .cid-s7uQ0vBSoM .collapsed:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 6rem);
+    max-height: calc(98.5vh - 5rem);
   }
 }
 .cid-s7uQ0vBSoM .collapsed button.navbar-toggler {
@@ -1857,6 +1860,9 @@ section.lazy-placeholder:after {
 .cid-s7BlNTRxns .mbr-step-text {
   color: #c1c1c1;
 }
+.cid-s7BlNTRxns .mbr-section-title {
+  color: #a79f11;
+}
 .cid-s7uQ0vBSoM .navbar {
   background: #000000;
   transition: none;
@@ -2103,7 +2109,7 @@ section.lazy-placeholder:after {
 }
 @media (min-width: 1024px) {
   .cid-s7uQ0vBSoM .collapsed:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 6rem);
+    max-height: calc(98.5vh - 5rem);
   }
 }
 .cid-s7uQ0vBSoM .collapsed button.navbar-toggler {
@@ -2258,15 +2264,15 @@ section.lazy-placeholder:after {
   color: #767676 !important;
 }
 .cid-s7Bl8xIIz5 {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 45px;
+  padding-bottom: 60px;
   background-image: url("../../../assets/images/background4.jpg");
 }
 .cid-s7Bl8xIIz5 .title {
   margin-bottom: 2rem;
 }
 .cid-s7Bl8xIIz5 .mbr-section-subtitle {
-  color: #767676;
+  color: #f5e917;
 }
 .cid-s7Bl8xIIz5 a:not([href]):not([tabindex]) {
   color: #fff;
@@ -2278,43 +2284,46 @@ section.lazy-placeholder:after {
 .cid-s7Bl8xIIz5 textarea.form-control {
   min-height: 188px;
 }
-.cid-s7BkJNzs1A {
+.cid-s7Bl8xIIz5 LABEL {
+  color: #f5e917;
+}
+.cid-sa0FTVnqsl {
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: #000000;
 }
 @media (max-width: 767px) {
-  .cid-s7BkJNzs1A .content {
+  .cid-sa0FTVnqsl .content {
     text-align: center;
   }
-  .cid-s7BkJNzs1A .content > div:not(:last-child) {
+  .cid-sa0FTVnqsl .content > div:not(:last-child) {
     margin-bottom: 2rem;
   }
 }
 @media (max-width: 767px) {
-  .cid-s7BkJNzs1A .media-wrap {
+  .cid-sa0FTVnqsl .media-wrap {
     margin-bottom: 1rem;
   }
 }
-.cid-s7BkJNzs1A .media-wrap .mbr-iconfont-logo {
+.cid-sa0FTVnqsl .media-wrap .mbr-iconfont-logo {
   font-size: 7.5rem;
   color: #f36;
 }
-.cid-s7BkJNzs1A .media-wrap img {
+.cid-sa0FTVnqsl .media-wrap img {
   height: 6rem;
 }
 @media (max-width: 767px) {
-  .cid-s7BkJNzs1A .footer-lower .copyright {
+  .cid-sa0FTVnqsl .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-s7BkJNzs1A .footer-lower hr {
+.cid-sa0FTVnqsl .footer-lower hr {
   margin: 1rem 0;
   border-color: #fff;
   opacity: .05;
 }
-.cid-s7BkJNzs1A .footer-lower .social-list {
+.cid-sa0FTVnqsl .footer-lower .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -2324,27 +2333,30 @@ section.lazy-placeholder:after {
   -webkit-justify-content: flex-end;
   justify-content: flex-end;
 }
-.cid-s7BkJNzs1A .footer-lower .social-list .mbr-iconfont-social {
+.cid-sa0FTVnqsl .footer-lower .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #fff;
 }
-.cid-s7BkJNzs1A .footer-lower .social-list .soc-item {
+.cid-sa0FTVnqsl .footer-lower .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-s7BkJNzs1A .footer-lower .social-list a {
+.cid-sa0FTVnqsl .footer-lower .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-s7BkJNzs1A .footer-lower .social-list a:hover {
+.cid-sa0FTVnqsl .footer-lower .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-s7BkJNzs1A .footer-lower .social-list {
+  .cid-sa0FTVnqsl .footer-lower .social-list {
     -webkit-justify-content: center;
     justify-content: center;
   }
+}
+.cid-sa0FTVnqsl H5 {
+  color: #f5e917;
 }
 .cid-s7uQ0vBSoM .navbar {
   background: #000000;
@@ -2592,7 +2604,7 @@ section.lazy-placeholder:after {
 }
 @media (min-width: 1024px) {
   .cid-s7uQ0vBSoM .collapsed:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 6rem);
+    max-height: calc(98.5vh - 5rem);
   }
 }
 .cid-s7uQ0vBSoM .collapsed button.navbar-toggler {
@@ -2746,6 +2758,238 @@ section.lazy-placeholder:after {
 .cid-s7uQ0vBSoM .dropdown-item:hover {
   color: #767676 !important;
 }
+.cid-s9TPLF3oNF {
+  padding-top: 120px;
+  padding-bottom: 90px;
+  background-image: url("../../../assets/images/background1.jpg");
+}
+.cid-s9TPLF3oNF .icons-media-container {
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  padding-top: 4rem;
+}
+.cid-s9TPLF3oNF .icons-media-container .mbr-iconfont {
+  font-size: 96px;
+  color: #ffffff;
+}
+.cid-s9TPLF3oNF .icons-media-container .icon-block {
+  padding-bottom: 1rem;
+}
+.cid-s9TPLF3oNF .mbr-text {
+  color: #ffffff;
+}
+.cid-s9TPLF3oNF .card {
+  padding-bottom: 1.5rem;
+}
+.cid-s9TPLF3oNF .mbr-text,
+.cid-s9TPLF3oNF .mbr-section-btn {
+  color: #f5e917;
+}
+.cid-s9TRxeDvcX {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #000000;
+}
+.cid-s9TRxeDvcX .mbr-section-subtitle {
+  color: #f5e917;
+}
+.cid-s9TRxeDvcX .media-row {
+  display: -webkit-flex;
+  justify-content: center;
+  -webkit-justify-content: center;
+}
+.cid-s9TRxeDvcX .team-item {
+  transition: all .2s;
+  margin-bottom: 2rem;
+}
+.cid-s9TRxeDvcX .team-item .item-image img {
+  width: 100%;
+}
+.cid-s9TRxeDvcX .team-item .item-name p {
+  margin-bottom: 0;
+}
+.cid-s9TRxeDvcX .team-item .item-role p {
+  margin-bottom: 0;
+}
+.cid-s9TRxeDvcX .team-item .item-social {
+  display: -webkit-flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  -webkit-flex-wrap: wrap;
+  -webkit-justify-content: center;
+}
+.cid-s9TRxeDvcX .team-item .item-social .socicon {
+  color: #232323;
+  font-size: 17px;
+}
+.cid-s9TRxeDvcX .team-item .item-caption {
+  background: #ffffff;
+}
+.cid-s9TRxeDvcX H2 {
+  color: #ffffff;
+}
+.cid-s9TRyzFBDH {
+  padding-top: 0px;
+  padding-bottom: 30px;
+  background-color: #000000;
+}
+.cid-s9TRyzFBDH .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-s9TRyzFBDH .media-row {
+  display: -webkit-flex;
+  justify-content: center;
+  -webkit-justify-content: center;
+}
+.cid-s9TRyzFBDH .team-item {
+  transition: all .2s;
+  margin-bottom: 2rem;
+}
+.cid-s9TRyzFBDH .team-item .item-image img {
+  width: 100%;
+}
+.cid-s9TRyzFBDH .team-item .item-name p {
+  margin-bottom: 0;
+}
+.cid-s9TRyzFBDH .team-item .item-role p {
+  margin-bottom: 0;
+}
+.cid-s9TRyzFBDH .team-item .item-social {
+  display: -webkit-flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  -webkit-flex-wrap: wrap;
+  -webkit-justify-content: center;
+}
+.cid-s9TRyzFBDH .team-item .item-social .socicon {
+  color: #232323;
+  font-size: 17px;
+}
+.cid-s9TRyzFBDH .team-item .item-caption {
+  background: #ffffff;
+}
+.cid-s9TRyzFBDH H2 {
+  color: #ffffff;
+}
+.cid-s9TRB2h6VB {
+  padding-top: 0px;
+  padding-bottom: 30px;
+  background-color: #000000;
+}
+.cid-s9TRB2h6VB .mbr-section-subtitle {
+  color: #f5e917;
+}
+.cid-s9TRB2h6VB .media-row {
+  display: -webkit-flex;
+  justify-content: center;
+  -webkit-justify-content: center;
+}
+.cid-s9TRB2h6VB .team-item {
+  transition: all .2s;
+  margin-bottom: 2rem;
+}
+.cid-s9TRB2h6VB .team-item .item-image img {
+  width: 100%;
+}
+.cid-s9TRB2h6VB .team-item .item-name p {
+  margin-bottom: 0;
+}
+.cid-s9TRB2h6VB .team-item .item-role p {
+  margin-bottom: 0;
+}
+.cid-s9TRB2h6VB .team-item .item-social {
+  display: -webkit-flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  -webkit-flex-wrap: wrap;
+  -webkit-justify-content: center;
+}
+.cid-s9TRB2h6VB .team-item .item-social .socicon {
+  color: #232323;
+  font-size: 17px;
+}
+.cid-s9TRB2h6VB .team-item .item-caption {
+  background: #ffffff;
+}
+.cid-s9TRB2h6VB H2 {
+  color: #ffffff;
+}
+.cid-sa0rswmV2l {
+  padding-top: 30px;
+  padding-bottom: 60px;
+  background-color: #000000;
+}
+@media (max-width: 767px) {
+  .cid-sa0rswmV2l .content {
+    text-align: center;
+  }
+  .cid-sa0rswmV2l .content > div:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-sa0rswmV2l .media-wrap {
+    margin-bottom: 1rem;
+  }
+}
+.cid-sa0rswmV2l .media-wrap .mbr-iconfont-logo {
+  font-size: 7.5rem;
+  color: #f36;
+}
+.cid-sa0rswmV2l .media-wrap img {
+  height: 6rem;
+}
+@media (max-width: 767px) {
+  .cid-sa0rswmV2l .footer-lower .copyright {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+.cid-sa0rswmV2l .footer-lower hr {
+  margin: 1rem 0;
+  border-color: #fff;
+  opacity: .05;
+}
+.cid-sa0rswmV2l .footer-lower .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+}
+.cid-sa0rswmV2l .footer-lower .social-list .mbr-iconfont-social {
+  font-size: 1.3rem;
+  color: #fff;
+}
+.cid-sa0rswmV2l .footer-lower .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-sa0rswmV2l .footer-lower .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-sa0rswmV2l .footer-lower .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-sa0rswmV2l .footer-lower .social-list {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+}
+.cid-sa0rswmV2l H5 {
+  color: #f5e917;
+}
 .cid-s7uQ0vBSoM .navbar {
   background: #000000;
   transition: none;
@@ -2992,7 +3236,7 @@ section.lazy-placeholder:after {
 }
 @media (min-width: 1024px) {
   .cid-s7uQ0vBSoM .collapsed:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 6rem);
+    max-height: calc(98.5vh - 5rem);
   }
 }
 .cid-s7uQ0vBSoM .collapsed button.navbar-toggler {
@@ -3176,6 +3420,11 @@ section.lazy-placeholder:after {
 }
 .cid-s7wxyfwZsF H5 {
   text-align: center;
+  color: #f5e917;
+}
+.cid-s7wxyfwZsF .mbr-text,
+.cid-s7wxyfwZsF .mbr-section-btn {
+  color: #f5e917;
 }
 .cid-s7wzXRrfg3 {
   padding-top: 30px;
@@ -3267,6 +3516,9 @@ section.lazy-placeholder:after {
 }
 .cid-s7B52wSQef .btn {
   margin: 0 0 .5rem 0;
+}
+.cid-s7B52wSQef H3 {
+  color: #f5e917;
 }
 .cid-s7BcPu4RC1 {
   padding-top: 45px;
@@ -3424,7 +3676,7 @@ section.lazy-placeholder:after {
   margin-bottom: 2rem;
 }
 .cid-s7Be4esolP .mbr-section-subtitle {
-  color: #767676;
+  color: #f5e917;
 }
 .cid-s7Be4esolP a:not([href]):not([tabindex]) {
   color: #fff;
@@ -3512,4 +3764,7 @@ section.lazy-placeholder:after {
 }
 .cid-s7B4wEP2Em P {
   text-align: left;
+}
+.cid-s7B4wEP2Em H5 {
+  color: #f5e917;
 }
